creating a web server with express, using static files and handlebars

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Samuel Mata <samuelab2@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "hbs": "^4.1.1"
   }
 }
